[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fire_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/water_icon.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://fonts/BlackAndWhitePicture-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Extra Spacing", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

font_path = "res://fonts/BlackAndWhitePicture-Regular.ttf"

[sub_resource type="DynamicFont" id=4]

size = 30
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

font_path = "res://fonts/BlackAndWhitePicture-Regular.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=6]

size = 60
use_mipmaps = false
use_filter = false
extra_spacing_char = 5
font_data = SubResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="hud" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="elemental_stats" type="Container" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -240.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="fire_count" type="Label" parent="elemental_stats" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 89.0
margin_top = 111.0
margin_right = 129.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="water_count" type="Label" parent="elemental_stats" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 113.0
margin_right = 47.0
margin_bottom = 127.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "10"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="fire_icon" type="Sprite" parent="elemental_stats" index="2"]

position = Vector2( 111.402, 70.8753 )
texture = ExtResource( 2 )

[node name="water_icon" type="Sprite" parent="elemental_stats" index="3"]

position = Vector2( 26.565, 76.3501 )
texture = ExtResource( 3 )

[node name="GameOverScreen" type="ColorRect" parent="." index="1"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.164062, 0, 0, 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Pause", "Rect", "Visibility" ]

[node name="GameOverLabel" type="Label" parent="GameOverScreen" index="0"]

modulate = Color( 1, 0, 0.257812, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "GameOver"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Material", "Visibility", "custom_constants", "custom_fonts" ]

[node name="HealthBar" type="ColorRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.04 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.925781, 0.111683, 0.00361633, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="BossHeathBar" type="ColorRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.04 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.298828, 0.597656, 0, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Rect", "Size Flags" ]


